[package]
name = "tasklist_parser"
version = "0.1.0"
edition = "2024"
description = "A simple CLI tool to parse .todo task list files."
license = "MIT" # (Добре мати ліцензію для crates.io)

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
pest = "2.7"
pest_derive = "2.7"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"